Random_quotes/styles.css
html, body {
    margin: 0;
    padding: 0;
}

#display {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh; 
    background-image: url('images.jpg');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.button {
    background-color: #212121;
    border: none;
    color: white;
    padding: 12px 24px; 
    text-align: center;
    font-size: 14px;
    border-radius: 10px;
    margin-top: 50px;
    transition: background-color 0.3s, transform 0.3s; 
}

.button:hover {
    background-color: #111; 
    transform: scale(1.1); 
}

.button:active {
    background-color: black;
    color: white; 
    transform: scale(1); 
}

.column {
    display: flex;
    flex-direction: column; 
    align-items: center; 
}

#text {
    width: 70%;
    margin: 0 auto;
    font-size: 1.5em;
    text-align: center;
    font-family: 'Outfit', sans-serif;
}

